--- a/profiles/templates/profiles/show_club_profile.html
+++ b/profiles/templates/profiles/show_club_profile.html
@@ -12,8 +12,7 @@
 
 {% block content %}  <!-- @todo frontend to be renovated to adjust template-->
 <section id="profile" class="profile" style="padding-top:10px;">
-  <div class="container profile-container" data-aos="fade-up">
-    <div class="container profile-head">
+  <div class="container-fluid profile-container" data-aos="fade-up">
       <div class="row">
         <div class="col-sm-6">{% include 'profiles/cards/_coach_account_card.html' %}</div>
         <div class="col-sm-6">{% include 'profiles/cards/_coach_clubs_card.html' %}</div>
