--- a/profiles/templates/platform/partials/_pagination.html
+++ b/profiles/templates/platform/partials/_pagination.html
@@ -1,19 +1,23 @@
     
 {% load i18n %}
-
-<div class="pagination d-block">
+{% load playmaker %}
+<div class="pagination d-block mt-2">
     <span class="float-center">
-        <span class="step-links text-center ">
+        <span class="step-links text-center">
             {% if page_obj.has_previous %}
 
-
+                <span class="p-1">
                 {% with "?page=1" as button_url %}
-                    {% include 'platform/buttons/action_button.html' with button_text=_('pierwsza') button_url=button_url button_prefix='&laquo;' %}
+                    {% include 'platform/buttons/action_button.html' with button_text=_('pierwsza') button_url=button_url %}
                 {% endwith %}
-
-                {% with "?page="|add:page_obj.previous_page_number as button_url %}
-                    {% include 'platform/buttons/action_button.html' with button_text=_('poprzednia') button_url=button_url button_suffix='&raquo;'%}
+                
+                </span>
+                <span class="p-1">
+                
+                {% with "?page="|addstr:page_obj.previous_page_number as button_url %}
+                    {% include 'platform/buttons/action_button.html' with button_text=_('poprzednia') button_url=button_url button_prefix='&laquo;'%}
                 {% endwith %}
+                </span>
             {% endif %}
 
             <span class="current">
@@ -21,13 +25,17 @@
             </span>
 
             {% if page_obj.has_next %}
-                {% with "?page="|add:page_obj.next_page_number as button_url %}
+               <span class="p-1">
+                {% with "?page="|addstr:page_obj.next_page_number as button_url %}
+                   
                     {% include 'platform/buttons/action_button.html' with button_text=_('następna') button_url=button_url %}
                 {% endwith %}
-
-                {% with "?page="|add:page_obj.paginator.num_pages as button_url %}
+                </span>
+                <span class="p-1">
+                {% with "?page="|addstr:page_obj.paginator.num_pages as button_url %}
                     {% include 'platform/buttons/action_button.html' with button_text=_('ostatnia') button_url=button_url button_suffix='&raquo;'%}
                 {% endwith %}
+                </span>
             {% endif %}
         </span>
     </span>
