--- a/profiles/templates/profiles/show_coach_profile.html
+++ b/profiles/templates/profiles/show_coach_profile.html
@@ -13,8 +13,8 @@
 
 {% block content %}  <!-- @todo frontend to be renovated to adjust template-->
 <section id="profile" class="profile" style="padding-top:10px;">
-  <div class="container profile-container" data-aos="fade-up">
-    <div class="container profile-head">
+  <div class="container-fluid profile-container" data-aos="fade-up">
+
       <div class="row">
         <div class="col-sm-6">{% include 'profiles/cards/coach/account_card.html' %}</div>
         <div class="col-sm-6">{% include 'profiles/cards/coach/clubs_card.html' %}</div>
