--- a/profiles/templates/profiles/cards/player/fantasy_card.html
+++ b/profiles/templates/profiles/cards/player/fantasy_card.html
@@ -7,14 +7,14 @@
         <h6 class="card-subtitle mb-2 text-muted"></h6>
         <div class="card-text text-center">
         {% if fantasy %}
-        <div class='row'>
-            <div class="row text-center mt-4">
+        
+            <div class="text-center mt-4">
                 <div class="col-3 border-right">
                     <div class="h4 font-weight-bold mb-0">{{ fantasy.score}}ptk.</div>
                     <span class="small text-gray">{{ fantasy.position }}</span>
                 </div>
             </div>
-        </div>
+        
         {% else %}
             <span class="heading text-muted"> 
                   {% trans 'Brak danych dla obecnego sezonu' %}  
