--- a/profiles/templates/platform/navigation/_nav_player.html
+++ b/profiles/templates/platform/navigation/_nav_player.html
@@ -2,8 +2,8 @@
 {% load static %}
 
 {% if user.is_authenticated %}
+    <li><a href="{% url 'profiles:my_requests'%}">{% trans 'Zapytania' %}</a></li>
     {% include 'platform/navigation/_nav.html'%}
-
     <li><a href="{% url 'profiles:my_carrier'%}">{% trans 'Kariera' %}</a></li>
     <li><a href="{% url 'profiles:my_fantasy'%}">{% trans 'Fantasy' %}</a></li>
     <li><a href="{% url 'profiles:my_games'%}">{% trans 'Mecze' %}</a></li>
