--- a/profiles/templates/profiles/carrier.html
+++ b/profiles/templates/profiles/carrier.html
@@ -7,11 +7,32 @@
 
 {% block title %}{{ block.super }} {% trans 'Moja kariera' %} {% endblock %}
 
+
+
+
+
+{% block content_header %}
+    {% include '_page_heading.html' with heading_title=page_title size=4 %}
+    {{ block.super }}
+{% endblock %}
+
+
 <!-- Benefits of the Django application -->
 {% block content %}
 <section id="profile-carrier" class="profile">
 
 <div class="d-flex flex-column justify-content-center text-center" data-aos="fade-up"> 
+
+        {% if carrier is None %}
+        <div class='col-md-12 text-center'>
+                   {% include 'platform/partials/_empty.html' %}
+                           
+                        <h4>Przygotwoujemy statystyki dla Twojego konta.</h4>
+                        <p>Uzupełnienie w całości Twojego piłkarskiego profilu pozwoli nam sporządzić odpowiednie metryki.</p>
+           </div>
+        {% else %}
+        
+
 
    {% for season, sdata in carrier.items %}
         {% for league, ldata in sdata.items %}
@@ -45,9 +66,16 @@
 
 
     {% endfor %}    
+
+
+
+    {% endif %}
 </div>  <!-- div container -->
 
 </section>
+<div id="debug" class="debug">
+  
+</div> 
 {% endblock content %}
 
 
