--- a/backend/static/assets/css/profiles.css
+++ b/backend/static/assets/css/profiles.css
@@ -272,7 +272,7 @@ section.profile {
     100% {
       transform: rotate(360deg);
     }
-
+  }
 
 
 /*
@@ -287,12 +287,14 @@ ul.timeline {
     list-style-type: none;
     position: relative;
     padding-left: 1.5rem;
+    list-style: none;
+    
 }
 
  /* Timeline vertical line */
 ul.timeline:before {
     content: ' ';
-    background: #fff;
+    background: #ccc;
     display: inline-block;
     position: absolute;
     left: 16px;
@@ -304,6 +306,7 @@ ul.timeline:before {
 
 li.timeline-item {
     margin: 20px 0;
+
 }
 
 /* Timeline item arrow */
